# nao_face_recognition

./: README.md
asdwork/asdinterface/: CMakeLists.txt  package.xml
asdwork/asdinterface/include/asdinterface/: asdinterface.hpp  ui_asdinterface.hpp
asdwork/asdinterface/launch/: asdinterface.launch
asdwork/asdinterface/scripts/: server_wrapper
asdwork/asdinterface/src/: asdinterface.cpp
asdwork/asdinterface/ui/: asdinterface.ui
asdwork/node_controllers/: CMakeLists.txt  package.xml
asdwork/node_controllers/src/: data_logger.cpp
face_recognition/: CMakeLists.txt  package.xml
face_recognition/src/: facedetect_class.h
face_recognition/src/practice/: test_opencv.cpp
nao_face_recognition/: CMakeLists.txt  package.xml
nao_face_recognition/src/: facedetect_class.cpp  facedetect_node.cpp
nao_face_recognition/src/practice/: detect_face.cpp  stream_video.cpp
speech_recognition/: CMakeLists.txt  package.xml
speech_recognition/include/speech_recognition/: speechrec.h
speech_recognition/src/: main.cpp  speech_recognition.cpp
